--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,16 @@ target
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+# Added by cargo
+
+/target
+
+*.db
+*.db-shm
+*.db-wal
+.env
+*.json
+config.toml
+credentials
