--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ futures = "0.3"
 ractor = { version = "0.15.9", features = ["async-trait"] }
 sqlx = { version = "0.8", default-features = false, features = ["sqlite", "chrono", "runtime-tokio"] }
 axum = { version = "0.8" }
+axum-extra = { version = "0.12", features = ["typed-header"] }
+headers = "0.4"
+subtle = "2.6"
 eventsource-stream = "0.2"
 figment = { version = "0.10", features = ["env"] }
 dotenvy = "0.15"
