--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ subtle = "2.6"
 eventsource-stream = "0.2"
 figment = { version = "0.10", features = ["env"] }
 tokio-stream = "0.1.17"
+time = "0.3"
 
 [build-dependencies]
 dotenvy = "0.15"
