feat: update model handling in configuration and enhance request validation for unsupported models

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ LISTEN_PORT=8188
 # Required Nexus API key used to authorize inbound requests.
 NEXUS_KEY=pwd
 
-# JSON array of Gemini models to treat as "big" models.
-BIGMODEL_LIST=["gemini-2.5-pro"]
+# JSON array of Gemini models.
+MODEL_LIST="[gemini-2.5-flash, gemini-2.5-pro, gemini-3-pro-preview]"
 
 # Optional directory containing credential JSON files to preload.
 CRED_PATH="./credentials"
