chore: update workflow paths to ignore example files and add example configuration file

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -8,6 +8,7 @@ on:
       - "LICENSE"
       - "**/*.png"
       - "**/*.jpg"
+      - "**/*.example"
       - ".github/ISSUE_TEMPLATE/**"
       - ".github/PULL_REQUEST_TEMPLATE.md"
 
