--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -8,6 +8,7 @@ on:
       - "LICENSE"
       - "**/*.png"
       - "**/*.jpg"
+      - "**/*.example"
       - ".github/ISSUE_TEMPLATE/**"
       - ".github/PULL_REQUEST_TEMPLATE.md"
 
